--- a/src/common/novnc/vnc.html
+++ b/src/common/novnc/vnc.html
@@ -64,6 +64,28 @@
     <script nomodule src="vendor/browser-es-module-loader/dist/browser-es-module-loader.js"></script>
     <!-- actual script modules -->
     <script type="module" crossorigin="anonymous" src="app/ui.js"></script>
+    <!-- handle ctrl-s, ctrl-w  -->
+    <script>
+    window.onbeforeunload = function (e) {
+        // Cancel the event
+        e.preventDefault();
+        // Chrome requires returnValue to be set
+        e.returnValue = 'Really want to quit?';
+    };
+    //Prevent Ctrl+S (and Ctrl+W for old browsers and Edge)
+    document.onkeydown = function (e) {
+        e = e || window.event;//Get event
+        if (!e.ctrlKey) return;
+        var code = e.which || e.keyCode;//Get key code
+        switch (code) {
+            case 83://Block Ctrl+S
+            case 87://Block Ctrl+W -- Not work in Chrome and new Firefox
+                e.preventDefault();
+                e.stopPropagation();
+                break;
+        }
+    };
+    </script>
     <!-- end scripts -->
 </head>
 
